--- a/rsvp.css
+++ b/rsvp.css
@@ -5,14 +5,20 @@
     --red: #471c1c;
     --color3: var(--primary);
     --color5: var(--secondary);
+    --envelope-width: clamp(0px, calc(30vh*5/3), 95%);
+    --envelope-height: calc(3/5 * var(--envelope-width));
+    --flap-height: calc(0.4 * var(--envelope-height));
+    --invite-height: calc(var(--envelope-height) / 0.7); /* This is a guesstimate ... */
+    --space: 1rem;
+    --full-height: calc(var(--flap-height) + var(--invite-height) + 4 * var(--space))
 }
     
 .container {
     position: relative;
-    /* width: clamp(400px, 50vw, 800px); */
-    width: clamp(0px, calc(30vh*5/3), 95%);
+    width: var(--envelope-width);
     aspect-ratio: 5/3;
-    margin: clamp(10%, 12vh, 300px) auto;
+    margin: 0 auto;
+    margin-top: calc(var(--full-height) / 2 - var(--flap-height));
     cursor: pointer;
 }
 
@@ -70,30 +76,17 @@
     opacity: 0.4;
     background-size: cover;
     background-image: url('./assets/flowers/pink-flower-seamless-pattern.jpg');
-    width: calc(100% - 2rem);
-    height: calc(100% - 2rem);
-}
-
-.envelope:before {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 5%;
-    width: 90%;
-    height: 20px;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    filter: blur(4px);
+    width: calc(100% - 2 * var(--space));
+    height: calc(100% - 2 * var(--space));
 }
 
 .invitation {
     position: absolute;
-    width: 90%;
-    /* height: 180px; */
+    margin: 0 var(--space) 0 var(--space);
+    padding: var(--space);
     height: fit-content;
     background: linear-gradient(45deg, #415345, #edffee);
-    left: 5%;
-    top: -200px;
+    top: -40%;
     opacity: 0;
     transition: all 0.8s 0.3s;
     text-align: center;
@@ -122,7 +115,7 @@
 }
 
 .container:hover .invitation {
-    top: 50px;
+    top: calc(2 * var(--space));
     opacity: 1;
 }
 
@@ -137,7 +130,7 @@
 }
 
 .invitation img {
-    max-width: calc(100% - 2rem);
+    width: 100%;
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: 8px;
 }
