--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
 :root {
-    --color1: #E2C9BF;
-    --color2: #D89B7A;
-    --color3: #C66539;
-    --color4: #AFACA1;
-    /* --color5: #6A6C57; */
-    --color5: #31312e;
+    --color1: #FFF9F4;
+    --color2: #E1A179;
+    --color3: #C4622D;
+    --color4: #A7C3A3;
+    --color5: #4A4A4A;
 }
 
 body {
@@ -17,7 +16,7 @@ body {
 
 header {
     background: linear-gradient(rgba(106, 108, 87, 0.5), rgba(106, 108, 87, 0.5)),
-        url('https://images.unsplash.com/photo-1525113990976-399916c7d5c7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') center/cover;
+        url('assets/photos/hands-ring.jpg') center/cover;
     color: white;
     text-align: center;
 
@@ -69,6 +68,7 @@ section {
     max-width: 1000px;
     margin: 1rem auto;
     position: relative;
+    border-radius:1rem;
 }
 
 .sacramento-regular {
@@ -81,6 +81,8 @@ section {
     background: var(--color2);
     position: relative;
     overflow: hidden;
+    display:flex;
+    gap: 1rem;
 }
 
 .location {
@@ -419,6 +421,42 @@ footer {
     color: var(--color3);
     margin-bottom: 10px;
 }
+
+.about-us {
+    background: var(--color1);
+    padding: 3rem 1rem;
+    text-align: center;
+}
+
+.about-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.about-card {
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    padding: 1rem;
+    max-width: 350px;
+    text-align: center;
+}
+
+.about-card img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    object-fit: cover;
+}
+
+.about-card h3 {
+    color: var(--color3);
+    margin-bottom: 0.5rem;
+}
+
 
 @media (max-width: 768px) {
     h1 {
