--- a/common.css
+++ b/common.css
@@ -30,13 +30,39 @@
 .pair-left {
     border-top-left-radius: 1rem;
     border-bottom-left-radius:1rem;
+    flex: 1;
+    flex-basis: 250px;
 }
 
 .pair-right {
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    flex: 1;
+    flex-basis: 250px;
 }
 
-.pair-right img {
+.pair-right img,iframe {
     border-radius: inherit;
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
+
+.pair {
+    display: inline-flex;
+    gap: 1rem;
+    flex-wrap:wrap;
+}
+
+.text-backdrop {
+    background:#fbfbfb4f; padding:0 1rem 0 1rem;
+}
+
+.background-img {
+    background-size: cover;
+    background-position: center;
+}
+
+.rounded {
+    border-radius: 1rem;
 }
