--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     --color4: #A7C3A3;
     --color5: #4A4A4A;
     --timeline-color:var(--color4);
+    --header-bg: #80b2d6;
 }
 
 body {
@@ -22,7 +23,8 @@ body{
 header {
     background-color: transparent;
     background-image:
-        linear-gradient(to right, #758f96 0%, #758f9600 30%, #758f9600 70%, #758f96 100%), /* burst of background color to fix the abrupt hand stop */
+        /* radial-gradient(to right, var(--header-bg) 0%, #758f9600 20%, #fff 50%, #758f9600 80%, var(--header-bg) 100%), */
+        /* radial-gradient(circle at center, rgba(0, 0, 0, 0.2) 0%, rgba(109, 125, 141, 0.95) 70%, var(--header-bg) 89%), */
         linear-gradient(rgba(106, 108, 87, 0.5), rgba(106, 108, 87, 0.5)),
         url('assets/photos/hands-ring-cropped.jpg');
     background-position: center;
@@ -36,6 +38,9 @@ header {
 
 @media (min-width: 1400px) {
     header {
+      background-image:
+        radial-gradient(circle at center, rgba(106, 108, 87, 0.5) 0%, rgba(106, 108, 87, 0.5) 70%, #748e95 87%),
+        url('assets/photos/hands-ring-cropped.jpg');
       background-size: 1400px; /* limit size on big screens */
       background-repeat: no-repeat;
       max-height: 800px; /* optional: prevent it from growing too tall */
@@ -217,7 +222,7 @@ section {
 
 .activity-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: auto;
     gap: 1rem;
     padding: 1rem;
