--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ section {
 
 .location {
     background: var(--color4);
-    padding-top: 0px; /*allow seamless elements in this one*/
+    /*padding-top: 0px; /*allow seamless elements in this one*/
 }
 
 .activities {
