--- a/index.css
+++ b/index.css
@@ -210,7 +210,7 @@ section {
 
 .hotel-info {
     background: white;
-    padding: 1rem;
+    /* padding: 1rem; */
     border-radius: 1rem;
     margin-top: 1rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
