--- a/index.css
+++ b/index.css
@@ -134,7 +134,7 @@ section {
 }
 
 .hotel-info {
-    background: white;
+    /* background: white; */
     /* padding: 1rem; */
     border-radius: 1rem;
     margin-top: 1rem;
