--- a/timeline.css
+++ b/timeline.css
@@ -39,7 +39,7 @@
 }
 
 @media (max-width: 700px) {
-    .timeline-event.right {
+    .timeline-event:nth-child(even) {
         justify-content: end;
     }
 }
