include invitation assets

--- a/index.css
+++ b/index.css
@@ -17,7 +17,8 @@ body {
 }
 
 body{
-    background-image: url('./assets/leaves/floral-background.png');
+    background-image: url('./assets/leaves/tropical-background2.png');
+    background-size: 13rem;
 }
       
 header {
