--- a/rsvp.css
+++ b/rsvp.css
@@ -74,8 +74,8 @@
 
 .flap-glue-strip {
     opacity: 0.4;
-    background-size: cover;
-    background-image: url('./assets/flowers/pink-flower-seamless-pattern.jpg');
+    background-size: 48%; /* this matches the size on the site background */
+    background-image: url('./assets/leaves/tropical-background2.png');
     width: calc(100% - 2 * var(--space));
     height: calc(100% - 2 * var(--space));
 }
@@ -151,10 +151,10 @@ p {
 .external-seal {
     position: absolute;
     /* bottom: 20px; */
-    top: 22.5%;
+    top: 20%;
     left: 50%;
     transform: translateX(-50%);
-    width: 20%;
+    width: 25%;
     /* height: /60px; */
     z-index: 3;
     /* transition: 0.8s; */
@@ -162,6 +162,11 @@ p {
     transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 3s;
     opacity: 1;
 
+}
+
+.external-seal img {
+    width:100%;
+    height:100%;
 }
 
 .wax-seal {
