--- a/rsvp.css
+++ b/rsvp.css
@@ -43,6 +43,7 @@
     transform-style: preserve-3d;
     transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px 4px 0 0;
+    box-shadow: 0px 1px 3px black;
     z-index: 2;
 }
 
