--- a/index.css
+++ b/index.css
@@ -211,6 +211,12 @@ section {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.back-btn {
+    background: var(--color2);
+    padding:1rem;
+    display:table;
+}
+
 .rsvp-btn:hover {
     background: var(--color5);
     transform: translateY(-3px);
