--- a/photos.css
+++ b/photos.css
@@ -1,16 +1,23 @@
 .photos img {
     object-fit: cover;
     aspect-ratio: 3 / 3; 
-    display: flex;
-    max-width: 200px;
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
 .photos {
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-    column-gap: 1rem;
-    row-gap: 1rem;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    /* margin-top: 2rem; */
+    margin: 2rem 1rem 0rem 1rem;
 }
+
+@media (max-width: 600px) {
+    .photos {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
