--- a/photos.css
+++ b/photos.css
@@ -10,7 +10,7 @@
 
 .photos {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
     gap: 1rem;
     /* margin-top: 2rem; */
     margin: 2rem 1rem 0rem 1rem;
@@ -21,6 +21,7 @@
       grid-template-columns: repeat(2, 1fr);
     }
   }
+
 
 .hr {
     height: 0.5rem;
