fixed background for main site

--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ body {
 body{
     background-image: url('./assets/leaves/tropical-background2.png');
     background-size: 13rem;
+    background-attachment: fixed;
 }
       
 header {
